plugins {
    id 'idea'
    id 'application'
    id 'io.github.krakowski.jextract' version '0.3.0'
}

group = 'io.github.krakowski'
version = '1.0'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(20))
    }
}

application {
    mainClass = 'io.github.krakowski.NativeHelloWorld'
}

jextract {

    header("${project.projectDir}/src/main/c/stdio.h") {

        // The library name
        libraries = [ 'stdc++' ]

        // The package under which all source files will be generated
        targetPackage = 'org.unix'

        // The generated class name
        className = 'Linux'

        // Whitelist of functions
        functions = [ 'printf' ]
    }
}

wrapper {
    gradleVersion = '7.4.1'
}
